<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/digestFragment">

    <fragment
        android:id="@+id/digestFragment"
        android:name="com.github.kasper_gram.somefetcher.ui.digest.DigestFragment"
        android:label="@string/digest_title" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.github.kasper_gram.somefetcher.ui.settings.SettingsFragment"
        android:label="@string/settings_title">
        <action
            android:id="@+id/action_settings_to_allowed_apps"
            app:destination="@id/allowedAppsFragment" />
    </fragment>

    <fragment
        android:id="@+id/allowedAppsFragment"
        android:name="com.github.kasper_gram.somefetcher.ui.settings.AllowedAppsFragment"
        android:label="@string/allowed_apps_title" />

</navigation>
